--- a/Regenerated_Project_Code/experiment_logs/missing-aware/2025-11-16_missing_aware_full_arch.yaml
+++ b/Regenerated_Project_Code/experiment_logs/missing-aware/2025-11-16_missing_aware_full_arch.yaml
@@ -1,17 +1,16 @@
-# Copy this file when logging a new experiment and update each field.
-experiment_id: "YYYY-MM-DD_<slug>_XX"
-parent_id: "<parent-experiment-id-or-null>"
-date: "YYYY-MM-DD"
-owner: "<your name or initials>"
+experiment_id: "2025-11-16_missing_aware_full_arch_A1"
+parent_id: "2025-11-16_missing_aware_baseline_a0"
+date: "2025-11-16"
+owner: "codex_agent"
 dataset: "MIMIC-III in-hospital mortality"
 task: "in-hospital-mortality"
-change: "<succinct description of the code/config change>"
+change: "First end-to-end SMART-style missing-aware ConCare run (10 pretrain epochs, mask ratio 0.2-0.5, aux loss 0.01)"
 belief:
   expected_final_gain: "neutral"
   expected_stability_gain: "neutral"
   expected_convergence_speed_gain: "neutral"
 config:
-  command: "python train.py --epochs 100 --batch_size 256 --lr 1e-3 --amp --append_masks"
+  command: "python train.py --epochs 100 --batch_size 256 --lr 1e-3 --amp --append_masks --papers_metrics_mode --missing_aware_extension --missing_aware_pretrain_epochs 10 --missing_aware_mask_ratio_min 0.2 --missing_aware_mask_ratio_max 0.5 --missing_aware_freeze_epochs 5 --missing_aware_aux_weight 0.01"
   args:
     epochs: 100
     batch_size: 256
@@ -28,17 +27,17 @@ config:
     append_masks: true
     diag: false
     compile: false
-    papers_metrics_mode: false
+    papers_metrics_mode: true
     num_workers: -1
     model_variant: "concare_full"
-    missing_aware_extension: false
-    missing_aware_pretrain_epochs: 0
+    missing_aware_extension: true
+    missing_aware_pretrain_epochs: 10
     missing_aware_pretrain_lr: null
     missing_aware_mask_ratio_min: 0.2
-    missing_aware_mask_ratio_max: 0.8
+    missing_aware_mask_ratio_max: 0.5
     missing_aware_ema_decay: 0.99
-    missing_aware_freeze_epochs: 0
-    missing_aware_aux_weight: 0.0
+    missing_aware_freeze_epochs: 5
+    missing_aware_aux_weight: 0.01
     keep_prob: 0.5
     missing_aware_disable_mask_bias: false
     missing_aware_disable_temporal_attention: false
@@ -59,86 +58,86 @@ config:
 metrics:
   mimic_iii:
     val:
-      best_epoch: null
-      auroc: null
-      auprc: null
-      f1: null
-      precision: null
-      recall: null
-      threshold: null
+      best_epoch: 13
+      auroc: 0.8357
+      auprc: 0.5199
+      f1: 0.5015
+      precision: 0.4351
+      recall: 0.5917
+      threshold: 0.58
     test_threshold_free:
-      auroc: null
-      auprc: null
-      loss: null
+      auroc: 0.8439
+      auprc: 0.4622
+      loss: 0.3662
     test_authors:
-      acc: null
-      auroc: null
-      auprc: null
-      minpse: null
-      f1: null
-      threshold: null
+      acc: 0.826947
+      auroc: 0.843851
+      auprc: 0.461041
+      minpse: 0.462567
+      f1: 0.459459
+      threshold: 0.58
     test_fixed_thr:
       threshold: 0.66
-      acc: null
-      f1: null
-      minpse: null
-    source: "<log file path or link>"
+      acc: 0.8622
+      f1: 0.4652
+      minpse: 0.5298
+    source: "Regenerated_Project_Code/results/train_val_test_log_2025-11-16_16-57-08 best of both world.txt"
 effect_size:
   mimic_iii:
     vs_parent:
       info:
-        run: train_val_test_log_2025-11-16_14-03-23 A0.txt
-        SEL: ./2025-11-16_baseline_concare_ram.yaml
+        run: "Regenerated_Project_Code/results/train_val_test_log_2025-11-16_14-19-58 A0.txt"
+        SEL: "Regenerated_Project_Code/experiment_logs/missing-aware/2025-11-16_baseline_concare_ram.yaml"
       delta:
         val:
-          best_epoch: null
-          auroc: null
-          auprc: null
-          f1: null
-          precision: null
-          recall: null
-          threshold: null
+          best_epoch: -11
+          auroc: -0.0041
+          auprc: -0.0125
+          f1: -0.0135
+          precision: -0.0105
+          recall: -0.0184
+          threshold: 0.08
         test_threshold_free:
-          auroc: null
-          auprc: null
-          loss: null
+          auroc: -0.0037
+          auprc: -0.0032
+          loss: 0.0163
         test_authors:
-          acc: null
-          auroc: null
-          auprc: null
-          minpse: null
-          f1: null
-          threshold: null
+          acc: -0.022559
+          auroc: -0.003799
+          auprc: -0.002918
+          minpse: -0.016043
+          f1: -0.016321
+          threshold: 0.08
         test_fixed_thr:
-          threshold: 0.66
-          acc: null
-          f1: null
-          minpse: null
+          threshold: 0.0
+          acc: -0.0179
+          f1: -0.0076
+          minpse: 0.0028
       pct:
         val:
-          best_epoch: null
-          auroc: null
-          auprc: null
-          f1: null
-          precision: null
-          recall: null
-          threshold: null
+          best_epoch: -0.458333
+          auroc: -0.004882
+          auprc: -0.023479
+          f1: -0.026214
+          precision: -0.023564
+          recall: -0.030159
+          threshold: 0.16
         test_threshold_free:
-          auroc: null
-          auprc: null
-          loss: null
+          auroc: -0.004365
+          auprc: -0.006876
+          loss: 0.046585
         test_authors:
-          acc: null
-          auroc: null
-          auprc: null
-          minpse: null
-          f1: null
-          threshold: null
+          acc: -0.026555
+          auroc: -0.004482
+          auprc: -0.006289
+          minpse: -0.03352
+          f1: -0.034304
+          threshold: 0.16
         test_fixed_thr:
-          threshold: 0.66
-          acc: null
-          f1: null
-          minpse: null
+          threshold: 0.0
+          acc: -0.020339
+          f1: -0.016074
+          minpse: 0.005313
     vs_siblings:
       sibling:
         info:
@@ -196,4 +195,6 @@ effect_size:
             minpse: null
 decision: "needs_followup"
 notes: >
-  Summarize qualitative takeaways, anomalies, or TODOs.
+  First SMART-style missing-aware attempt (pretrain=10, freeze=5, aux=0.01, mask ratio 0.2-0.5) fell
+  short of the RAM baseline: validation AUROC/AUPRC dropped slightly and the authors-style minpse
+  tracked 0.016 lower. Plan to adjust mask ratios and freezing schedule before the next run.
